--- a/src/app/components/drink-list/drink-list.component.scss
+++ b/src/app/components/drink-list/drink-list.component.scss
@@ -1,7 +1,9 @@
 .drink-list {
-  margin-bottom: 50%;
+  //margin-bottom: 50%;
   width: 35vh;
   position: relative;
+  overflow-y: auto;
+  height: 95vh;
 }
 
 .drink-list ul {
