--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,9 +2,11 @@
   //width: 100%;
   width: 40vh;
   //margin-bottom: 60%;
-  margin-bottom: 20vh;
+  //margin-bottom: 20vh;
   padding-top: 20%;
   //height: 100vh;
+  overflow-y: auto;
+  height: 95vh;
 }
 
 .date-picker-container {
