--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -1,5 +1,7 @@
 .inner-container {
-    margin-bottom: 100%;
+    margin-top: 100%;
+    overflow-y: auto;
+    height: 95vh;
 
   }
 
