--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -6,8 +6,10 @@
 
 .formContainer {
     width: 100%;
-    margin-bottom: 100%;
-    padding-top: 20%;
+    //margin-bottom: 100%;
+    //padding-top: 20%;
+    overflow-y: auto;
+    height: 95vh;
 }
 
 .formContainer > h1 {
