--- a/src/app/components/update-profile/update-profile.component.scss
+++ b/src/app/components/update-profile/update-profile.component.scss
@@ -1,6 +1,9 @@
 .formContainer {
     width: 40vh;
-    margin-bottom: 150%;
+    //margin-bottom: 150%;
+    overflow-y: auto;
+    height: 95vh;
+    //padding-top: 20%;
 }
 
 .formContainer>h1 {
